--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ai-sdk/openai": "^2.0.20",
     "@sendgrid/mail": "^8.1.5",
     "ai": "^5.0.23",
+    "magicpath-ai": "^1.1.2",
     "next": "^15.5.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
