--- a/package.json
+++ b/package.json
@@ -28,8 +28,14 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.20",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@sendgrid/mail": "^8.1.5",
+    "@types/lodash": "^4.17.20",
     "ai": "^5.0.23",
+    "framer-motion": "^12.23.12",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.543.0",
     "magicpath-ai": "^1.1.2",
     "next": "^15.5.0",
     "react": "^18.3.0",
