--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "@eslint/eslintrc": "^3.3.1",
     "@jest/globals": "^29.7.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -75,6 +77,7 @@
     "eslint-config-next": "^16.0.1",
     "framer-motion": "^12.23.12",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.2.0",
     "lucide-react": "^0.543.0",
     "next": "^16.0.1",
     "postcss": "^8.5.6",
